--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/es6-shim": "^0.31.39",
-    "@types/node": "^12.0.3",
-    "autoprefixer": "^9.5.1",
-    "clean-webpack-plugin": "^2.0.2",
-    "css-loader": "^2.1.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "postcss-clean": "^1.1.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1",
-    "webpack-notifier": "^1.7.0"
+    "@types/es6-shim": "^0.31.42",
+    "@types/node": "^16.10.3",
+    "autoprefixer": "^9.8.8",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "node-sass": "^6.0.1",
+    "postcss": "7.0.39",
+    "postcss-clean": "^1.2.2",
+    "postcss-loader": "^6.1.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.58.0",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-notifier": "^1.14.0"
   }
 }
